# exoplanet-pipeline-upgraded

./: .gitignore  FINAL_AUDIT_REPORT.md  FINAL_REPORT_DRAFT_PARTS_1_10.md  README.md  TEST_STATUS.md  pyproject.toml  requirements.txt
docs/: kaggle_real_run.md  public_cnn_training.md
notebooks/: 01_02_parts_1_2_demo.ipynb  03_05_parts_3_5_demo.ipynb  06_part_6_ai_classifier_demo.ipynb  07_08_uncertainty_validation_demo.ipynb  09_10_batch_submission_demo.ipynb  kaggle_real_data_run.ipynb
pipeline_src/: dataprepro2.py  ml_data_loader.py  ml_feature_builder.py  ml_parameter_estimation.py  ml_pipeline.py  ml_stage1_autoencoder.py  ml_stage2_classifier.py  ml_visualize.py  run_real_batch.py
scripts/: build_labeled_candidate_catalog.py  build_public_cnn_dataset.py  build_public_cnn_examples.py  build_tic_ctl_target_list.py  diagnose_cnn_model.py  download_public_metadata.py  generate_final_submission_assets.py  predict_ai_classifier_catalog.py  predict_cnn_examples.py  run_part6_cnn_demo.py  run_part6_synthetic_ai_demo.py  run_parts_1_to_5_fits.py  run_parts_1_to_5_synthetic.py  run_parts_1_to_8_synthetic_single.py  run_parts_7_8_synthetic_validation.py  run_parts_9_10_fits_directory.py  run_parts_9_10_synthetic_batch.py  run_tic_ctl_pipeline.py  train_ai_classifier_from_catalog.py  train_cnn_classifier.py  validate_candidate_catalog.py
tests/: test_batch_final_outputs.py  test_cli.py  test_cnn_deep.py  test_cnn_views.py  test_detection.py  test_fit_vetting_classify.py  test_fits_ingest.py  test_ml_part6.py  test_preprocess.py  test_public_data.py  (+2 more)
(+33 files in other folders)
